--- a/css/style.css
+++ b/css/style.css
@@ -8,19 +8,24 @@
     width: 100%;
     overflow: hidden;
 }
-.header,
-main,
+.header
+.main
+/* .teem, */
 footer {
     max-width: 100%;
-    width: 1200px;
+    width: 1500px;
     margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 /* header */
-.header {
+.rbk {
     display: flex;
     justify-content: space-between;
+    text-align: center;
     padding-top: 60px;
-    align-items: center;
+    position: absolute;    
+    margin: 0 auto;
 }
  @media (max-width: 1024px) {
     .logo {
@@ -31,9 +36,6 @@ footer {
     }
 }
 @media (max-width: 425px) {
-    /* .header {
-        flex-direction: column;
-    }      */
     .menu input {
         /* order: 1; */
         display: flex;
@@ -68,8 +70,11 @@ footer {
 } 
 .view {
     text-align: center;
-    margin-bottom: 400px;
+    margin-bottom: 400px;  
+}
+.view {
     background: url(/img/femili2.jpg);
+    height: 100vh;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -155,8 +160,8 @@ footer {
         padding-left: 0px;
     }
     .teem ul{
-        margin-left: 130px;
-        margin-right: 130px;
+        margin-left: 100px;
+        margin-right: 100px;
     }
     .teem ul li:nth-child(-n+2) {
         margin-bottom: 0px;
